Changes to index.html

--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Adopta un Amigo</title>
+    <title>Adopta un Amigo o a varios</title>
   </head>
   <body>
     <header>
