--- a/project2/original.html
+++ b/project2/original.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Adopta un Amigo o a varios</title>
+    <title>Adopta un Amigo</title>
   </head>
   <body>
     <header>
@@ -27,7 +27,6 @@
 
     <section id="acerca">
       <h2>Acerca de Nosotros</h2>
-      Somos una familia que da perros en adopción 
       <!-- Puedes agregar contenido aquí -->
     </section>
 
@@ -41,7 +40,6 @@
 
     <section id="ayudar">
       <h2>Cómo Ayudar</h2>
-      Puede colaborar con nosotros compartiendo nuestra pagina en las redes sociales o si desea puede hacer un donativo a traves de nuestro de PayPal o ATH Movil
       <!-- Debes agregar contenido aquí -->
     </section>
 
@@ -51,12 +49,6 @@
     </section>
 
     <footer>
-      <ul>
-        787-497-1895
-        adoptaunamigo@gmail.com
-        <a href="www.facebook.com"></www>facebook</a>
-        <a href="www.instagram.com"></www>instagram</a>
-      </ul>
       <!-- 
             Debes agregar contenido de pie de página aquí.
             Incluye una dirección física.
