--- a/project1/index.html
+++ b/project1/index.html
@@ -82,13 +82,13 @@
     <section id="historias">
       <h2>Historias de Adopción</h2>
         <ul>
-          Laura "Recomiendo este local, me atendieron muy generosamente y el proceso fue rapido y sencillo."
+          Laura: "Recomiendo este local, me atendieron muy generosamente y el proceso fue rapido y sencillo."
         </ul>
         <ul>
-          Fernando "Fue una experiencia inolvidable y los empleados de este local me ayudaron un monton con el proceso, les agradezco muchisimo por sus labores."
+          Fernando: "Fue una experiencia inolvidable y los empleados de este local me ayudaron un monton con el proceso, les agradezco muchisimo por sus labores."
         </ul>
         <ul>
-          Maria "Un comodo lugar, se realizo todo de manera efectiva. Por lo tanto, estoy completamente satisfecho."
+          Maria: "Un comodo lugar, se realizo todo de manera efectiva. Por lo tanto, estoy completamente satisfecho."
         </ul>
       <!-- Debes agregar contenido aquí -->
     </section>
