--- a/project2/actividad.html
+++ b/project2/actividad.html
@@ -171,7 +171,11 @@
                 <h2>
                 <a href="http://facebook.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-facebook"></i>  Facebook</a>
 
-                <a href="http://facebook.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-instagram"></i>  Instagram</a>  
+                <a href="http://instagram.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-instagram"></i>  Instagram</a> 
+                
+                <a href="http://paypal.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-paypal"></i>  PayPal</a>
+
+                <a href="http://athmovil.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-athmovil"></i>  Ath Movil</a>
               
               </h2>
               </li>
