--- a/project3/index.html
+++ b/project3/index.html
@@ -104,6 +104,14 @@
           </div>
       </section>
 
+      <section id="Donaciones" class="p-5 text-center bg-white">
+        <h2 class="text-dark fw-bold mb-5">Donaciones</h2>
+        <p class="text-dark mt-4 fw-light fs-3">
+          Si desea donar o aportar con la iglesia puede hacerlo a traves de nuestro ATH Movil o nuestro PayPal. 
+          <a href="https://paypal.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-paypal"></i>  PayPal</a>
+          <a href="https://athmovil.com" target="_blank" class="btn btn-primary fs-5 tn btn-primary"><i class="bi bi-athmovil"></i>  Ath Movil</a>
+        </p>
+
       <footer>
         <div class="row p-5 bg-dark text-white">
           <div class="col-1"></div>
